<resources>
    <string name="app_name">StepAppV4</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="menu_steps">Steps</string>
    <string name="menu_report">Report</string>
    <string name="menu_profile">Profile</string>

    <string name="goal">Goal: 100 </string>
    <string name="zero">0</string>
    <string name="steps">Steps</string>

    <string name="start">Start</string>
    <string name="start_text"> Counter Started </string>
    <string name="stop_text"> Counter Stopped </string>
    <string name="acc_sensor_not_available"> Accelerometer sensor is not available </string>

    <string name="stop">Stop</string>

    <string name="start_count">Steps Counter Started</string>
    <string name="step_permission_denied">Activity recognition permission is denied</string>

    <string name="delete_entries">Delete Entries</string>
    <string name="get_entries">Get Entries</string>
    <string name="completed_steps_today">Completed steps today:</string>
    <string name="today">Today</string>
</resources>